--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "scully": "npx scully -- --project chavyv-xyz-angular",
+    "scully:serve": "npx scully serve -- --project chavyv-xyz-angular"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +19,23 @@
     "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/platform-server": "^12",
     "@angular/router": "^14.2.0",
+    "@apollo/client": "^3.6.9",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@ngrx/effects": "^14.3.1",
+    "@ngrx/store": "^14.3.1",
+    "@scullyio/init": "^2.1.36",
+    "@scullyio/ng-lib": "^2.1.36",
+    "@scullyio/platform-server": "^2.1.0",
+    "@scullyio/scully": "^2.1.36",
+    "@scullyio/scully-plugin-puppeteer": "^2.1.36",
+    "apollo-angular": "^4.0.1",
+    "graphql": "^16.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
