--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@scullyio/ng-lib": "^2.1.36",
     "@scullyio/platform-server": "^2.1.0",
     "@scullyio/scully": "^2.1.36",
+    "@scullyio/scully-plugin-playwright": "^2.1.36",
     "@scullyio/scully-plugin-puppeteer": "^2.1.36",
     "apollo-angular": "^4.0.1",
     "graphql": "^16.6.0",
+    "playwright": "^1.26.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
