--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches: [master]
 jobs:
-  build-angular:
+  build-angular-and-scully:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,18 +15,10 @@ jobs:
           node-version: "14"
       - run: npm install
       - run: npm run build
-  build-scully:
-    runs-on: ubuntu-latest
-    needs: [build-angular]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "14"
-      - run: npx scully
+      - run: npm run scully
   deploy:
     runs-on: ubuntu-latest
-    needs: [build-angular, build-scully]
+    needs: [build-angular-and-scully]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
