--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/platform-server": "^12",
     "@angular/router": "^14.2.0",
+    "@angular/service-worker": "^14.2.0",
     "@apollo/client": "^3.6.9",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
