--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": ["src/styles.css"],
-            "scripts": [],
-            "serviceWorker": true,
-            "ngswConfigPath": "ngsw-config.json"
+            "scripts": []
           },
           "configurations": {
             "production": {
