--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --ssl",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "scully": "npx scully -- --project chavyv-xyz-angular",
-    "scully:serve": "npx scully serve -- --project chavyv-xyz-angular"
+    "scully:serve": "npx scully serve -- --project chavyv-xyz-angular",
+    "custom:build": "node customBuildReducer.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
@@ -21,7 +21,6 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/platform-server": "^12",
     "@angular/router": "^14.2.0",
-    "@angular/service-worker": "^14.2.0",
     "@apollo/client": "^3.6.9",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -37,7 +36,6 @@
     "@scullyio/scully-plugin-playwright": "^2.1.36",
     "apollo-angular": "^4.0.1",
     "graphql": "^16.6.0",
-    "playwright": "^1.26.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -48,13 +46,17 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "autoprefixer": "^10.4.11",
+    "fs-extra": "^10.1.0",
+    "gulp": "^4.0.2",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "playwright": "^1.26.0",
     "postcss": "^8.4.16",
+    "puppeteer": "^18.0.4",
     "tailwindcss": "^3.1.8",
     "typescript": "~4.7.2"
   }
