--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
       - run: npm run scully
       - name: Run both scully serve and custom build
         run: |
-          npm run scully:serve
+          npm run scully:serve &
           node CustomBuildReducer.mjs && vercel deploy dist/static-coveraged --prod --token=${{ secrets.VERCEL_TOKEN }}
