--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,17 @@
-name: Build first before deploy to Vercel
+name: Build first before deploy to Cloudflare Pages
 
 on:
   push:
     branches: [master]
+  schedule:
+    - cron: "0 * * * *"
 jobs:
   build-angular-and-scully-and-deploy:
     runs-on: ubuntu-latest
     environment: production
     env:
-      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+      CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -22,4 +24,11 @@ jobs:
       - name: Run both scully serve and custom build
         run: |
           npm run scully:serve &
-          sleep 5 && node customBuildReducer.mjs && vercel deploy dist/static-coveraged --prod --token=${{ secrets.VERCEL_TOKEN }}
+          sleep 5 && node customBuildReducer.mjs
+      - name: Publish app
+        uses: cloudflare/wrangler-action@2.0.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          command: pages publish --project-name=chavyv-xyz-angular
+          workingDirectory: "dist/static-coveraged"
