--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,4 @@ jobs:
           npm run scully:serve &
           sleep 5 && node customBuildReducer.mjs
       - name: Publish app
-        uses: cloudflare/wrangler-action@2.0.0
-        with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          accountId: ${{ secrets.CF_ACCOUNT_ID }}
-          command: pages publish dist/static-coveraged --project-name=chavyv-xyz-angular
+        run: CLOUDFLARE_ACCOUNT_ID=${{ secrets.CF_ACCOUNT_ID }} npx wrangler pages publish dist/static-coveraged --project-name=chavyv-xyz-angular --commit-dirty=true
