--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [master]
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 */6 * * *"
 jobs:
   build-angular-and-scully-and-deploy:
     runs-on: ubuntu-latest
